# NUROGRN_AI_SCHOOL_TEACHER_ASSISTANT

Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/: Dockerfile  README.md  alembic.ini  debug_rag.py  dev.db  pyproject.toml  requirements.txt
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/alembic/: env.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/alembic/versions/: 0001_initial.py  7590a1885be4_add_textbooks_tables.py  c7f8e9a1b2c3_add_textbook_chunk_embeddings.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/app/: main.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/app/api/: analytics.py  auth.py  deps.py  exams.py  imports.py  reports.py  resources.py  router.py  students.py  subjects.py  teacher_tools.py  textbooks.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/app/core/: config.py  security.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/app/db/: session.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/app/models/: __init__.py  base.py  enums.py  exam.py  report.py  resource_catalog.py  (+4 more)
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/scripts/: backfill_textbook_embeddings.py  build_textbook_manifest.py  create_test_user.py  ingest_book.py  ingest_textbooks.py  init_local_db.py
Nurogenai - schoolteacher_AI_FE/Nurogenai - schoolteacher_AI/services/api/tests/: test_analytics.py  test_csv_import.py
(+77 files in other folders)
